Styled header using flexbox.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,24 +10,36 @@ body {
 }
 
 header {
+    display: flex;
     color: #92ccce;
     background-image: url("https://media.giphy.com/media/dXKLXks7fK9qrRxbHF/giphy.gif");
+    flex-direction: column;
 }
 
-header nav {
-    display: inline-block;
+.header-nav {
+    display: flex;
     background-color: #31343d;
-    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header h1 {
     font-size: 36px;
-    padding: 10px 0px 10px 50px;
+    padding: 10px 20px 10px 50px;
     margin: 10px 0px;
-    width: 50%;
     background-color: #92ccce;
     color: #445877;
-    display: inline-block;
+}
+
+header nav a {
+    color: #92ccce;
+    padding: 20px;
+}
+
+.header-title {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
 }
 
 .self-portrait {
@@ -37,17 +49,12 @@ header h1 {
     padding: 20px;
 }
 
-header nav a {
-    color: #92ccce;
-    float: right;
-    padding: 20px;
-}
-
 header h2 {
     color: #445877;
-    float: right;
     background-color: #92ccce;
-    margin: 150px 30px 10px 80px;
+    padding: 10px;
+    font-size: 20px;
+    margin: 0px 20px 20px;
 }
 
 .container {
