--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,15 +66,16 @@ header h2 {
 
 .content h2 {
     font-size: 36px;
-    flex-flow: column wrap;
-    justify-content: flex-start;
-    padding: 0px 20px 20px 100px;
+    width: 20%;
+    text-align: right;
+    margin-right: 20px;
+    padding: 0px 10px 20px 100px;
+    border-right-color: #31343d;
+    border-right-style: solid;
 }
 
 .content aside {
     padding: 0px 30px 20px;
-    border-left-color: #31343d;
-    border-left-style: solid;
     justify-content: space-between;
 }
 
