--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ header h2 {
 .content {
     display: flex;
     padding: 20px;
+    text-align: justify;
 }
 
 .content h2 {
@@ -74,19 +75,60 @@ header h2 {
     border-right-style: solid;
 }
 
-.content aside {
-    padding: 0px 30px 20px;
-    justify-content: space-between;
+.featured-project {
+    display: flex;
+    height: 200px;
+    align-items: stretch;
+    position: relative;
+    background-color: #eeeef7;
 }
 
-aside img {
+.featured-project img, .project-info img{
+    object-fit: cover;
     border-color: #92ccce;
     border-style: solid;
     border-width: 5px;
-    max-height: 286px;
 }
 
-#main-project {
-    object-fit: none;
-    width: fit-content;
+.featured-project img:hover {
+    color: #445877
+}
+
+.project-title {
+    display: flex;
+    background-color: #92ccce;
+    color: #31343d;
+    align-items: flex-end;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 10px;
+    flex-direction: column;
+    padding: 10px;
+}
+
+h3 {
+    font-size: 20px;
+    padding-bottom: 5px;
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    align-content: space-around;
+    background-color: #eeeef7;
+    flex-direction: row;
+
+}
+
+.project-info {
+    display: flex;
+    position: relative;
+    width: 50%;
+    justify-items: center;
+    padding: 5px 5px 0px 0px;
+}
+
+.content .contacts {
+    display: flex;
 }
