--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Default settings for the entire webpage. */
+/* Default settings for the entire webpage background. */
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
@@ -65,13 +65,14 @@ header h2 {
     margin: 0px 20px 20px;
 }
 
-/* Set the background and padding around the content. */
+/* Sets the background and padding around the main contents within the body tag. */
 main {
     display: flex;
     background-color: #eeeef7;
-    padding: 20px 20px 20px 80px;
+    padding: 20px 0px 0px 30px;
 }
 
+/* Sets secondary container that holds the 3 flex-boxed containers (About Me, Work, and Contact Me) */
 .content {
     flex: 1 0;
     justify-items: space-between;
@@ -79,18 +80,17 @@ main {
 
 .content-main {
     display: flex;
-    align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .content-main p {
     text-align: justify;
-    padding-left: 10px;
+    padding-left: 20px;
     width: 70%;
 }
 
-.content h2 {
+.content-main h2 {
     word-spacing: 300px;
     font-size: 36px;
     width: 20%;
@@ -106,9 +106,10 @@ main {
     align-items: center;
     width: 70%;
     flex-direction: column;
-    padding-left: 10px;
+    padding-left: 20px;
 }
 
+/* Style settings for images within the Work section. */
 .featured-project {
     display: flex;
     align-items: stretch;
@@ -116,15 +117,26 @@ main {
     background-color: #eeeef7;
 }
 
-.featured-project img, .project-info img{
+.work-content img:hover {
+    opacity: 1.0;
+}
+
+.featured-project img, .project-info img {
     height: 300px;
     width: 100%;
     object-fit: cover;
     border-color: #92ccce;
     border-style: solid;
     border-width: 5px;
+    opacity: 0.7;
 }
 
+.project-info img {
+    height: 150px;
+    object-fit: fill;
+}
+
+/* Sets the ability for the each image title to be on top of each image. */
 .project-title {
     display: flex;
     background-color: #92ccce;
@@ -142,6 +154,7 @@ h3 {
     padding-bottom: 5px;
 }
 
+/* Styling for .projects section */
 .projects {
     display: flex;
     flex-wrap: wrap;
@@ -158,15 +171,9 @@ h3 {
     width: 49%;
     justify-items: center;
     padding: 5px 0px 0px 0px;
-
 }
 
-.project-info img {
-    height: 150px;
-    width: 100%;
-    object-fit: fill;
-}
-
+/* Styling for .contacts section. */
 .contacts {
     display: flex;
     width: 70%;
@@ -179,6 +186,7 @@ h3 {
     justify-items: stretch;
 }
 
+/* Added accessibility for mobile users */
 @media screen and (max-width: 600px) {
     .content: 100%;
 }
