Added padding to text links.

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,8 +1,8 @@
-<body style="background: url(/assets/images/blue-marble.jpg) no-repeat left fixed;
-            -webkit-background-size: 60%;
-            -moz-background-size: 60%;
-            -o-background-size: 60%;
-            background-size: 60%;">
+<body style="background: url(/assets/images/blue-marble.jpg) no-repeat top left fixed;
+            -webkit-background-size: 80%;
+            -moz-background-size: 80%;
+            -o-background-size: 80%;
+            background-size: 80%;">
 
     {{> nav}}
 
