--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,4 @@
-<body style="background: url(/assets/images/blue-marble.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;"
-}>
+<body style="background: url(/assets/images/blue-marble.jpg) repeat center fixed; background-size: cover;">
 
     <div class="site-wrapper">
 
@@ -12,11 +7,11 @@
             <h2 class="index-title text-center">Research Coordinator & Full-Stack Web Developer</h2>
         </div>
 
-        <div class="d-flex justify-content-evenly">
-            <a class="text-white" href="about">ABOUT ME</a>
-            <a class="text-white" href="projects">PROJECTS</a>
-            <a class="text-white" href="contact">CONTACT ME</a>
-            <a class="text-white" href="/assets/Resume.pdf" target="_blank">RESUME</a>
+        <div class="d-flex flex-wrap justify-content-evenly">
+            <a class="text-white p-4" href="about">ABOUT ME</a>
+            <a class="text-white p-4" href="projects">PROJECTS</a>
+            <a class="text-white p-4" href="contact">CONTACT ME</a>
+            <a class="text-white p-4" href="/assets/Resume.pdf" target="_blank">RESUME</a>
         </div>
 
     </div>
