Resized background cover.

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,13 +1,13 @@
-<body style="background: url(/assets/images/blue-marble.jpg) no-repeat left fixed;
-  -webkit-background-size: 60%;
-  -moz-background-size: 60%;
-  -o-background-size: 60%;
-  background-size: 60%;">
+<body style="background: url(/assets/images/blue-marble.jpg) no-repeat top left fixed;
+            -webkit-background-size: 70%;
+            -moz-background-size: 70%;
+            -o-background-size: 70%;
+            background-size: 70%;">
 
     {{> nav}}
 
     <div class="container">
-        <div class="row justify-content-between m-5">
+        <div class="row d-flex justify-content-between m-5">
             <div class="col-8">
             </div>
             <div class="contact col-4 bg-white">
